# agent_playground

./: .gitignore  CLAUDE.md  README.md  example_agent.json  requirements.txt
agent-factory/: .env.example  .gitignore  ARCHITECTURE.md  README.md  dummy.env  pyproject.toml
agent-factory/examples/: README.md  base-template.json  research-overrides.yaml  research_agent.json  research_agent_resolved.json  weather_agent.json  weather_agent_with_schemas.json
agent-factory/examples/configs/: basic-example.json
agent-factory/src/agent_factory/: __init__.py  cli.py  config.py  deploy.py  harness.py  mcp_bridge.py
agent-factory/src/agent_factory/core/: runner.py
agent-factory/src/agent_factory/deploy/: __init__.py  client.py  modal_app.py
agent-factory/src/agent_factory/http/: api.py
agent-factory/tests/: __init__.py  test_cli.py  test_config.py  test_config_management.py  test_harness.py
agent-responses/: DESIGN.md  README.md  pyproject.toml  test_empty_tools.py
agent-responses/examples/: basic_assistant.json  basic_research_assistant.json
agent-responses/src/agent_responses/: __init__.py  cli.py  client.py  config.py  http_app.py  runner.py  utils.py
agent-responses/src/agent_responses/deploy/: __init__.py  modal_app.py
tools/: MODAL_DEPLOY.md  README.md  __init__.py  deploy.sh  example_mcp_server.py  launch_local_tools.sh  launch_servers.sh  modal_deploy.py  openmemory_modal.py  requirements.txt  servers.json  servers_config.json
